parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    COLON
    DO
    SWITCH

Grammar

Rule 0     S' -> program
Rule 1     program -> function_definition program
Rule 2     program -> class_definition program
Rule 3     program -> function_call
Rule 4     program -> empty
Rule 5     class_definition -> DEFINE CLASS ID LPAREN RPAREN LBRACE program RBRACE
Rule 6     function_definition -> DEFINE data_type ID LPAREN function_definition_args RPAREN block
Rule 7     function_definition_args -> var_list
Rule 8     function_definition_args -> empty
Rule 9     var_list -> var_declaration COMMA var_list
Rule 10    var_list -> var_declaration
Rule 11    var_declaration -> data_type ID
Rule 12    data_type -> VOID
Rule 13    data_type -> INT
Rule 14    data_type -> FLOAT
Rule 15    data_type -> STRING
Rule 16    data_type -> CHAR
Rule 17    function_call -> ID LPAREN function_call_args RPAREN
Rule 18    function_call_args -> parameter_list
Rule 19    function_call_args -> empty
Rule 20    parameter_list -> expression COMMA parameter_list
Rule 21    parameter_list -> expression
Rule 22    block -> LBRACE statements RBRACE
Rule 23    statements -> statement statements
Rule 24    statements -> empty
Rule 25    statement -> matched_statement
Rule 26    statement -> unmatched_statement
Rule 27    matched_statement -> IF LPAREN logical_expression RPAREN matched_statement ELSE matched_statement
Rule 28    matched_statement -> WHILE LPAREN logical_expression RPAREN matched_statement
Rule 29    matched_statement -> FOR LPAREN assignment SEMI_COLON logical_expression SEMI_COLON assignment RPAREN matched_statement
Rule 30    matched_statement -> return_statement SEMI_COLON
Rule 31    matched_statement -> compound_statement SEMI_COLON
Rule 32    matched_statement -> simple_statement SEMI_COLON
Rule 33    matched_statement -> block
Rule 34    unmatched_statement -> IF LPAREN logical_expression RPAREN matched_statement
Rule 35    unmatched_statement -> IF LPAREN logical_expression RPAREN matched_statement ELSE unmatched_statement
Rule 36    logical_expression -> logical_term OR logical_term
Rule 37    logical_expression -> logical_term
Rule 38    logical_term -> logical_factor AND logical_factor
Rule 39    logical_term -> logical_factor
Rule 40    logical_factor -> boolean_statement
Rule 41    logical_factor -> NOT logical_factor
Rule 42    logical_factor -> LPAREN logical_expression RPAREN
Rule 43    boolean_statement -> value comparison_op value
Rule 44    boolean_statement -> value
Rule 45    value -> ID
Rule 46    value -> number
Rule 47    number -> int
Rule 48    number -> float
Rule 49    int -> INTCONST
Rule 50    float -> FLOATCONST
Rule 51    comparison_op -> LESS_THAN
Rule 52    comparison_op -> LESS_EQUAL
Rule 53    comparison_op -> GREATER_THAN
Rule 54    comparison_op -> GREATER_EQUAL
Rule 55    comparison_op -> EQUAL
Rule 56    comparison_op -> NOT_EQUAL
Rule 57    compound_statement -> var_list
Rule 58    compound_statement -> assignment
Rule 59    simple_statement -> expression
Rule 60    assignment -> var_declaration EQUALS expression
Rule 61    assignment -> var_declaration EQUALS string
Rule 62    assignment -> var_declaration EQUALS char
Rule 63    assignment -> ID EQUALS expression
Rule 64    assignment -> ID EQUALS string
Rule 65    assignment -> ID EQUALS char
Rule 66    string -> STRINGCONST
Rule 67    char -> CHARCONST
Rule 68    expression -> expression PLUS term
Rule 69    expression -> expression MINUS term
Rule 70    expression -> term
Rule 71    term -> term TIMES factor
Rule 72    term -> term DIVIDE factor
Rule 73    term -> term MOD factor
Rule 74    term -> factor
Rule 75    factor -> number
Rule 76    factor -> ID
Rule 77    factor -> factor_expr
Rule 78    factor -> function_call
Rule 79    factor_expr -> LPAREN expression RPAREN
Rule 80    uminus_expression -> MINUS LPAREN expression RPAREN
Rule 81    empty -> <empty>
Rule 82    return_statement -> RETURN expression
Rule 83    function_definition -> DEFINE data_type ID LPAREN function_definition_args RPAREN error

Terminals, with rules where they appear

AND                  : 38
CASE                 : 
CHAR                 : 16
CHARCONST            : 67
CLASS                : 5
COLON                : 
COMMA                : 9 20
DEFINE               : 5 6 83
DIVIDE               : 72
DO                   : 
ELSE                 : 27 35
EQUAL                : 55
EQUALS               : 60 61 62 63 64 65
FLOAT                : 14
FLOATCONST           : 50
FOR                  : 29
GREATER_EQUAL        : 54
GREATER_THAN         : 53
ID                   : 5 6 11 17 45 63 64 65 76 83
IF                   : 27 34 35
INT                  : 13
INTCONST             : 49
LBRACE               : 5 22
LESS_EQUAL           : 52
LESS_THAN            : 51
LPAREN               : 5 6 17 27 28 29 34 35 42 79 80 83
MINUS                : 69 80
MOD                  : 73
NOT                  : 41
NOT_EQUAL            : 56
OR                   : 36
PLUS                 : 68
RBRACE               : 5 22
RETURN               : 82
RPAREN               : 5 6 17 27 28 29 34 35 42 79 80 83
SEMI_COLON           : 29 29 30 31 32
STRING               : 15
STRINGCONST          : 66
SWITCH               : 
TIMES                : 71
VOID                 : 12
WHILE                : 28
error                : 83

Nonterminals, with rules where they appear

assignment           : 29 29 58
block                : 6 33
boolean_statement    : 40
char                 : 62 65
class_definition     : 2
comparison_op        : 43
compound_statement   : 31
data_type            : 6 11 83
empty                : 4 8 19 24
expression           : 20 21 59 60 63 68 69 79 80 82
factor               : 71 72 73 74
factor_expr          : 77
float                : 48
function_call        : 3 78
function_call_args   : 17
function_definition  : 1
function_definition_args : 6 83
int                  : 47
logical_expression   : 27 28 29 34 35 42
logical_factor       : 38 38 39 41
logical_term         : 36 36 37
matched_statement    : 25 27 27 28 29 34 35
number               : 46 75
parameter_list       : 18 20
program              : 1 2 5 0
return_statement     : 30
simple_statement     : 32
statement            : 23
statements           : 22 23
string               : 61 64
term                 : 68 69 70 71 72 73
uminus_expression    : 
unmatched_statement  : 26 35
value                : 43 43 44
var_declaration      : 9 10 60 61 62
var_list             : 7 9 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_definition program
    (2) program -> . class_definition program
    (3) program -> . function_call
    (4) program -> . empty
    (6) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN block
    (83) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN error
    (5) class_definition -> . DEFINE CLASS ID LPAREN RPAREN LBRACE program RBRACE
    (17) function_call -> . ID LPAREN function_call_args RPAREN
    (81) empty -> .

    DEFINE          shift and go to state 6
    ID              shift and go to state 7
    $end            reduce using rule 81 (empty -> .)

    program                        shift and go to state 1
    function_definition            shift and go to state 2
    class_definition               shift and go to state 3
    function_call                  shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> function_definition . program
    (1) program -> . function_definition program
    (2) program -> . class_definition program
    (3) program -> . function_call
    (4) program -> . empty
    (6) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN block
    (83) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN error
    (5) class_definition -> . DEFINE CLASS ID LPAREN RPAREN LBRACE program RBRACE
    (17) function_call -> . ID LPAREN function_call_args RPAREN
    (81) empty -> .

    DEFINE          shift and go to state 6
    ID              shift and go to state 7
    $end            reduce using rule 81 (empty -> .)
    RBRACE          reduce using rule 81 (empty -> .)

    function_definition            shift and go to state 2
    program                        shift and go to state 8
    class_definition               shift and go to state 3
    function_call                  shift and go to state 4
    empty                          shift and go to state 5

state 3

    (2) program -> class_definition . program
    (1) program -> . function_definition program
    (2) program -> . class_definition program
    (3) program -> . function_call
    (4) program -> . empty
    (6) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN block
    (83) function_definition -> . DEFINE data_type ID LPAREN function_definition_args RPAREN error
    (5) class_definition -> . DEFINE CLASS ID LPAREN RPAREN LBRACE program RBRACE
    (17) function_call -> . ID LPAREN function_call_args RPAREN
    (81) empty -> .

    DEFINE          shift and go to state 6
    ID              shift and go to state 7
    $end            reduce using rule 81 (empty -> .)
    RBRACE          reduce using rule 81 (empty -> .)

    class_definition               shift and go to state 3
    program                        shift and go to state 9
    function_definition            shift and go to state 2
    function_call                  shift and go to state 4
    empty                          shift and go to state 5

state 4

    (3) program -> function_call .

    $end            reduce using rule 3 (program -> function_call .)
    RBRACE          reduce using rule 3 (program -> function_call .)


state 5

    (4) program -> empty .

    $end            reduce using rule 4 (program -> empty .)
    RBRACE          reduce using rule 4 (program -> empty .)


state 6

    (6) function_definition -> DEFINE . data_type ID LPAREN function_definition_args RPAREN block
    (83) function_definition -> DEFINE . data_type ID LPAREN function_definition_args RPAREN error
    (5) class_definition -> DEFINE . CLASS ID LPAREN RPAREN LBRACE program RBRACE
    (12) data_type -> . VOID
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . STRING
    (16) data_type -> . CHAR

    CLASS           shift and go to state 11
    VOID            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16

    data_type                      shift and go to state 10

state 7

    (17) function_call -> ID . LPAREN function_call_args RPAREN

    LPAREN          shift and go to state 17


state 8

    (1) program -> function_definition program .

    $end            reduce using rule 1 (program -> function_definition program .)
    RBRACE          reduce using rule 1 (program -> function_definition program .)


state 9

    (2) program -> class_definition program .

    $end            reduce using rule 2 (program -> class_definition program .)
    RBRACE          reduce using rule 2 (program -> class_definition program .)


state 10

    (6) function_definition -> DEFINE data_type . ID LPAREN function_definition_args RPAREN block
    (83) function_definition -> DEFINE data_type . ID LPAREN function_definition_args RPAREN error

    ID              shift and go to state 18


state 11

    (5) class_definition -> DEFINE CLASS . ID LPAREN RPAREN LBRACE program RBRACE

    ID              shift and go to state 19


state 12

    (12) data_type -> VOID .

    ID              reduce using rule 12 (data_type -> VOID .)


state 13

    (13) data_type -> INT .

    ID              reduce using rule 13 (data_type -> INT .)


state 14

    (14) data_type -> FLOAT .

    ID              reduce using rule 14 (data_type -> FLOAT .)


state 15

    (15) data_type -> STRING .

    ID              reduce using rule 15 (data_type -> STRING .)


state 16

    (16) data_type -> CHAR .

    ID              reduce using rule 16 (data_type -> CHAR .)


state 17

    (17) function_call -> ID LPAREN . function_call_args RPAREN
    (18) function_call_args -> . parameter_list
    (19) function_call_args -> . empty
    (20) parameter_list -> . expression COMMA parameter_list
    (21) parameter_list -> . expression
    (81) empty -> .
    (68) expression -> . expression PLUS term
    (69) expression -> . expression MINUS term
    (70) expression -> . term
    (71) term -> . term TIMES factor
    (72) term -> . term DIVIDE factor
    (73) term -> . term MOD factor
    (74) term -> . factor
    (75) factor -> . number
    (76) factor -> . ID
    (77) factor -> . factor_expr
    (78) factor -> . function_call
    (47) number -> . int
    (48) number -> . float
    (79) factor_expr -> . LPAREN expression RPAREN
    (17) function_call -> . ID LPAREN function_call_args RPAREN
    (49) int -> . INTCONST
    (50) float -> . FLOATCONST

    RPAREN          reduce using rule 81 (empty -> .)
    ID              shift and go to state 20
    LPAREN          shift and go to state 21
    INTCONST        shift and go to state 33
    FLOATCONST      shift and go to state 34

    function_call_args             shift and go to state 22
    parameter_list                 shift and go to state 23
    empty                          shift and go to state 24
    expression                     shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27
    number                         shift and go to state 28
    factor_expr                    shift and go to state 29
    function_call                  shift and go to state 30
    int                            shift and go to state 31
    float                          shift and go to state 32

state 18

    (6) function_definition -> DEFINE data_type ID . LPAREN function_definition_args RPAREN block
    (83) function_definition -> DEFINE data_type ID . LPAREN function_definition_args RPAREN error

    LPAREN          shift and go to state 35


state 19

    (5) class_definition -> DEFINE CLASS ID . LPAREN RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 36


state 20

    (76) factor -> ID .
    (17) function_call -> ID . LPAREN function_call_args RPAREN

    TIMES           reduce using rule 76 (factor -> ID .)
    DIVIDE          reduce using rule 76 (factor -> ID .)
    MOD             reduce using rule 76 (factor -> ID .)
    COMMA           reduce using rule 76 (factor -> ID .)
    PLUS            reduce using rule 76 (factor -> ID .)
    MINUS           reduce using rule 76 (factor -> ID .)
    RPAREN          reduce using rule 76 (factor -> ID .)
    SEMI_COLON      reduce using rule 76 (factor -> ID .)
    LPAREN          shift and go to state 17


state 21

    (79) factor_expr -> LPAREN . expression RPAREN
    (68) expression -> . expression PLUS term
    (69) expression -> . expression MINUS term
    (70) expression -> . term
    (71) term -> . term TIMES factor
    (72) term -> . term DIVIDE factor
    (73) term -> . term MOD factor
    (74) term -> . factor
    (75) factor -> . number
    (76) factor -> . ID
    (77) factor -> . factor_expr
    (78) factor -> . function_call
    (47) number -> . int
    (48) number -> . float
    (79) factor_expr -> . LPAREN expression RPAREN
    (17) function_call -> . ID LPAREN function_call_args RPAREN
    (49) int -> . INTCONST
    (50) float -> . FLOATCONST

    ID              shift and go to state 20
    LPAREN          shift and go to state 21
    INTCONST        shift and go to state 33
    FLOATCONST      shift and go to state 34

    expression                     shift and go to state 37
    term                           shift and go to state 26
    factor                         shift and go to state 27
    number                         shift and go to state 28
    factor_expr                    shift and go to state 29
    function_call                  shift and go to state 30
    int                            shift and go to state 31
    float                          shift and go to state 32

state 22

    (17) function_call -> ID LPAREN function_call_args . RPAREN

    RPAREN          shift and go to state 38


state 23

    (18) function_call_args -> parameter_list .

    RPAREN          reduce using rule 18 (function_call_args -> parameter_list .)


state 24

    (19) function_call_args -> empty .

    RPAREN          reduce using rule 19 (function_call_args -> empty .)


state 25

    (20) parameter_list -> expression . COMMA parameter_list
    (21) parameter_list -> expression .
    (68) expression -> expression . PLUS term
    (69) expression -> expression . MINUS term

    COMMA           shift and go to state 39
    RPAREN          reduce using rule 21 (parameter_list -> expression .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 26

    (70) expression -> term .
    (71) term -> term . TIMES factor
    (72) term -> term . DIVIDE factor
    (73) term -> term . MOD factor

    COMMA           reduce using rule 70 (expression -> term .)
    PLUS            reduce using rule 70 (expression -> term .)
    MINUS           reduce using rule 70 (expression -> term .)
    RPAREN          reduce using rule 70 (expression -> term .)
    SEMI_COLON      reduce using rule 70 (expression -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    MOD             shift and go to state 44


state 27

    (74) term -> factor .

    TIMES           reduce using rule 74 (term -> factor .)
    DIVIDE          reduce using rule 74 (term -> factor .)
    MOD             reduce using rule 74 (term -> factor .)
    COMMA           reduce using rule 74 (term -> factor .)
    PLUS            reduce using rule 74 (term -> factor .)
    MINUS           reduce using rule 74 (term -> factor .)
    RPAREN          reduce using rule 74 (term -> factor .)
    SEMI_COLON      reduce using rule 74 (term -> factor .)


state 28

    (75) factor -> number .

    TIMES           reduce using rule 75 (factor -> number .)
    DIVIDE          reduce using rule 75 (factor -> number .)
    MOD             reduce using rule 75 (factor -> number .)
    COMMA           reduce using rule 75 (factor -> number .)
    PLUS            reduce using rule 75 (factor -> number .)
    MINUS           reduce using rule 75 (factor -> number .)
    RPAREN          reduce using rule 75 (factor -> number .)
    SEMI_COLON      reduce using rule 75 (factor -> number .)


state 29

    (77) factor -> factor_expr .

    TIMES           reduce using rule 77 (factor -> factor_expr .)
    DIVIDE          reduce using rule 77 (factor -> factor_expr .)
    MOD             reduce using rule 77 (factor -> factor_expr .)
    COMMA           reduce using rule 77 (factor -> factor_expr .)
    PLUS            reduce using rule 77 (factor -> factor_expr .)
    MINUS           reduce using rule 77 (factor -> factor_expr .)
    RPAREN          reduce using rule 77 (factor -> factor_expr .)
    SEMI_COLON      reduce using rule 77 (factor -> factor_expr .)


state 30

    (78) factor -> function_call .

    TIMES           reduce using rule 78 (factor -> function_call .)
    DIVIDE          reduce using rule 78 (factor -> function_call .)
    MOD             reduce using rule 78 (factor -> function_call .)
    COMMA           reduce using rule 78 (factor -> function_call .)
    PLUS            reduce using rule 78 (factor -> function_call .)
    MINUS           reduce using rule 78 (factor -> function_call .)
    RPAREN          reduce using rule 78 (factor -> function_call .)
    SEMI_COLON      reduce using rule 78 (factor -> function_call .)


state 31

    (47) number -> int .

    TIMES           reduce using rule 47 (number -> int .)
    DIVIDE          reduce using rule 47 (number -> int .)
    MOD             reduce using rule 47 (number -> int .)
    COMMA           reduce using rule 47 (number -> int .)
    PLUS            reduce using rule 47 (number -> int .)
    MINUS           reduce using rule 47 (number -> int .)
    RPAREN          reduce using rule 47 (number -> int .)
    SEMI_COLON      reduce using rule 47 (number -> int .)
    LESS_THAN       reduce using rule 47 (number -> int .)
    LESS_EQUAL      reduce using rule 47 (number -> int .)
    GREATER_THAN    reduce using rule 47 (number -> int .)
    GREATER_EQUAL   reduce using rule 47 (number -> int .)
    EQUAL           reduce using rule 47 (number -> int .)
    NOT_EQUAL       reduce using rule 47 (number -> int .)
    AND             reduce using rule 47 (number -> int .)
    OR              reduce using rule 47 (number -> int .)


state 32

    (48) number -> float .

    TIMES           reduce using rule 48 (number -> float .)
    DIVIDE          reduce using rule 48 (number -> float .)
    MOD             reduce using rule 48 (number -> float .)
    COMMA           reduce using rule 48 (number -> float .)
    PLUS            reduce using rule 48 (number -> float .)
    MINUS           reduce using rule 48 (number -> float .)
    RPAREN          reduce using rule 48 (number -> float .)
    SEMI_COLON      reduce using rule 48 (number -> float .)
    LESS_THAN       reduce using rule 48 (number -> float .)
    LESS_EQUAL      reduce using rule 48 (number -> float .)
    GREATER_THAN    reduce using rule 48 (number -> float .)
    GREATER_EQUAL   reduce using rule 48 (number -> float .)
    EQUAL           reduce using rule 48 (number -> float .)
    NOT_EQUAL       reduce using rule 48 (number -> float .)
    AND             reduce using rule 48 (number -> float .)
    OR              reduce using rule 48 (number -> float .)


state 33

    (49) int -> INTCONST .

    TIMES           reduce using rule 49 (int -> INTCONST .)
    DIVIDE          reduce using rule 49 (int -> INTCONST .)
    MOD             reduce using rule 49 (int -> INTCONST .)
    COMMA           reduce using rule 49 (int -> INTCONST .)
    PLUS            reduce using rule 49 (int -> INTCONST .)
    MINUS           reduce using rule 49 (int -> INTCONST .)
    RPAREN          reduce using rule 49 (int -> INTCONST .)
    SEMI_COLON      reduce using rule 49 (int -> INTCONST .)
    LESS_THAN       reduce using rule 49 (int -> INTCONST .)
    LESS_EQUAL      reduce using rule 49 (int -> INTCONST .)
    GREATER_THAN    reduce using rule 49 (int -> INTCONST .)
    GREATER_EQUAL   reduce using rule 49 (int -> INTCONST .)
    EQUAL           reduce using rule 49 (int -> INTCONST .)
    NOT_EQUAL       reduce using rule 49 (int -> INTCONST .)
    AND             reduce using rule 49 (int -> INTCONST .)
    OR              reduce using rule 49 (int -> INTCONST .)


state 34

    (50) float -> FLOATCONST .

    TIMES           reduce using rule 50 (float -> FLOATCONST .)
    DIVIDE          reduce using rule 50 (float -> FLOATCONST .)
    MOD             reduce using rule 50 (float -> FLOATCONST .)
    COMMA           reduce using rule 50 (float -> FLOATCONST .)
    PLUS            reduce using rule 50 (float -> FLOATCONST .)
    MINUS           reduce using rule 50 (float -> FLOATCONST .)
    RPAREN          reduce using rule 50 (float -> FLOATCONST .)
    SEMI_COLON      reduce using rule 50 (float -> FLOATCONST .)
    LESS_THAN       reduce using rule 50 (float -> FLOATCONST .)
    LESS_EQUAL      reduce using rule 50 (float -> FLOATCONST .)
    GREATER_THAN    reduce using rule 50 (float -> FLOATCONST .)
    GREATER_EQUAL   reduce using rule 50 (float -> FLOATCONST .)
    EQUAL           reduce using rule 50 (float -> FLOATCONST .)
    NOT_EQUAL       reduce using rule 50 (float -> FLOATCONST .)
    AND             reduce using rule 50 (float -> FLOATCONST .)
    OR              reduce using rule 50 (float -> FLOATCONST .)


state 35

    (6) function_definition -> DEFINE data_type ID LPAREN . function_definition_args RPAREN block
    (83) function_definition -> DEFINE data_type ID LPAREN . function_definition_args RPAREN error
    (7) function_definition_args -> . var_list
    (8) function_definition_args -> . empty
    (9) var_list -> . var_declaration COMMA var_list
    (10) var_list -> . var_declaration
    (81) empty -> .
    (11) var_declaration -> . data_type ID
    (12) data_type -> . VOID
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . STRING
    (16) data_type -> . CHAR

    RPAREN          reduce using rule 81 (empty -> .)
    VOID            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16

    data_type                      shift and go to state 45
    function_definition_args       shift and go to state 46
    var_list                       shift and go to state 47
    empty                          shift and go to state 48
    var_declaration                shift and go to state 49

state 36

    (5) class_definition -> DEFINE CLASS ID LPAREN . RPAREN LBRACE program RBRACE

    RPAREN          shift and go to state 50


state 37

    (79) factor_expr -> LPAREN expression . RPAREN
    (68) expression -> expression . PLUS term
    (69) expression -> expression . MINUS term

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 38

    (17) function_call -> ID LPAREN function_call_args RPAREN .
